[tool]
[tool.pdm]

[project]
name = "neutron-sync"
version = "0.1.0"
description = "Sync your dotfiles securely to an encrypted Git"
authors = [
    {name = "Paul Bailey", email = "paul@neutron.studio"},
]
dependencies = [
    "typer>=0.7.0",
    "GitPython>=3.1.30",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "BSDv3"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
_.env_file = ".env"
ndev = "pdm run python nsync/main.py"
