[project]
name = "neutron-sync"
dynamic = ["version"]
description = "Sync your dotfiles securely to an encrypted Git"
authors = [
    {name = "Paul Bailey", email = "paul@neutron.studio"},
]
dependencies = [
    "GitPython>=3.1.30",
    "typer[all]>=0.7.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "BSDv3"}

[project.urls]
homepage = "https://github.com/neutron-sync/neutron-sync"

[project.scripts]
nsync = "nsync.main:app"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
version = {from = "nsync/__init__.py"}

[tool.pdm.scripts]
_.env_file = ".env"
ndev = "pdm run python nsync/main.py"
publish = "pdm publish --username pizzapanther"
