[project]
name = "neutron-sync"
dynamic = ["version"]
description = "Sync your dotfiles securely to an encrypted Git"
authors = [
    {name = "Paul Bailey", email = "paul@neutron.studio"},
]
dependencies = [
    "GitPython>=3.1.30",
    "typer[all]>=0.7.0",
    "blacksheep>=1.2.10",
    "uvicorn>=0.20.0",
    "setuptools>=67.4.0",
    "haikunator>=2.1.0",
    "redis[hiredis]>=4.5.1",
    "cryptography>=39.0.1",
    "httpx>=0.23.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "BSDv3"}

[project.urls]
homepage = "https://github.com/neutron-sync/neutron-sync"

[project.scripts]
nsync = "nsync.main:app"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
version = {from = "nsync/__init__.py"}

[tool.pdm.scripts]
_.env_file = ".env"
ndev = "pdm run python nsync/main.py"
publish = "pdm publish --username __token__ --password $PDM_PUBLISH_PASSWORD_NSYNC"
